--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
-  "compilerOptions": {
-    "strict": true,
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "target": "es2017",
-    "outDir": "./bin",
-    "baseUrl": "./",
-    "incremental": true,
-    "module": "ESNext"
-  },
-  "exclude": ["node_modules", "dist"]
+	"compilerOptions": {
+		"strict": true,
+		"declaration": false,
+		"removeComments": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"resolveJsonModule": true,
+		"moduleResolution": "nodenext",
+		"target": "esnext",
+		"outDir": "./bin",
+		"baseUrl": "./",
+		"incremental": true,
+		"module": "nodenext"
+		// "paths": {
+		// 	"tools/*": ["tools/*"]
+		// }
+	},
+	"exclude": ["node_modules", "dist", "templates"]
 }
